Refactor betting scenarios and hedges in index.html

--- a/index.html
+++ b/index.html
@@ -530,39 +530,45 @@
                     }
                 ]
             },
+            safePlay: {
+                title: "Conservative Cushion",
+                subtitle: "Bet Under Season Averages",
+                icon: "🎯",
+                description: "Pure math play. Every prop line is BELOW season average. Highest probability 6-leg parlay.",
+                legs: ['herbert-pass', 'johnston-rec', 'vidal-rush', 'rodgers-comp', 'metcalf-rec', 'warren-rush'],
+                hedges: [
+                    {
+                        title: "If Top Players Underperform",
+                        logic: "Stars get doubled. Secondary options become primary targets.",
+                        swaps: [
+                            {out: 'johnston-rec', in: 'mcconkey-rec'},
+                            {out: 'metcalf-rec', in: 'gadsden-rec'}
+                        ]
+                    },
+                    {
+                        title: "If Game Gets Pass-Heavy",
+                        logic: "One team falls behind early. Rushing props miss, passing increases.",
+                        swaps: [
+                            {out: 'vidal-rush', in: 'herbert-comp'},
+                            {out: 'warren-rush', in: 'rodgers-pass'}
+                        ]
+                    },
+                    {
+                        title: "If Run Game Dominates",
+                        logic: "Both teams establish run early. Less passing volume than expected.",
+                        swaps: [
+                            {out: 'herbert-pass', in: 'mcconkey-catch'},
+                            {out: 'rodgers-comp', in: 'warren-rec'}
+                        ]
+                    }
+                ]
+            },
             underdog: {
                 title: "Upset Special",
                 subtitle: "Underdogs & Value Plays",
                 icon: "⚡",
                 description: "Game doesn't go as expected. Backups shine, favorites underperform.",
                 legs: ['rodgers-pass', 'warren-rush', 'warren-rec', 'gadsden-rec', 'vidal-rush', 'mcconkey-catch'],
-                hedges: [
-                    {
-                        title: "If Steelers Can't Move Ball",
-                        logic: "PIT offense stalls. Chargers control game but don't blow out.",
-                        swaps: [
-                            {out: 'rodgers-pass', in: 'herbert-comp'},
-                            {out: 'warren-rush', in: 'mcconkey-rec'}
-                        ]
-                    },
-                    {
-                        title: "If Chargers Dominate After All",
-                        logic: "Favorites live up to billing. Herbert and top weapons feast.",
-                        swaps: [
-                            {out: 'warren-rush', in: 'herbert-pass'},
-                            {out: 'gadsden-rec', in: 'johnston-rec'}
-                        ]
-                    },
-                    {
-                        title: "If True Defensive Battle",
-                        logic: "Neither offense does much. Only the safest props with huge cushions hit.",
-                        swaps: [
-                            {out: 'rodgers-pass', in: 'rodgers-comp'},
-                            {out: 'warren-rec', in: 'metcalf-catch'}
-                        ]
-                    }
-                ]
-            }
         };
         
         let selectedScenario = null;
